# StockMonitor

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml  stockmonitor.spec
.github/workflows/: release.yml
installer/: stockmonitor.iss
src/stockmonitor/: __init__.py  app.py  main.py
src/stockmonitor/config/: settings.py
src/stockmonitor/models/: quote.py
src/stockmonitor/services/: autostart.py  state_store.py  stock_api.py  taskbar_utils.py  trading_time_gate.py  window_behavior.py
src/stockmonitor/ui/: floating_bar.py  system_tray.py
tests/: test_state_store.py  test_taskbar_utils.py  test_trading_time_gate.py
