[project]
name = "stockmonitor"
version = "0.1.0"
description = "Windows floating stock bar MVP built with PySide6"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pyside6>=6.11.0",
    "pywin32>=311",
]

[project.scripts]
stockmonitor = "stockmonitor.main:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockmonitor"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "ruff>=0.15.10",
]
